CS-579 Fix problems with fonts and spacing

--- a/src/styles/components/businesses/_business-details.scss
+++ b/src/styles/components/businesses/_business-details.scss
@@ -3,6 +3,17 @@
     display: flex;
     margin-bottom: 32px;
     max-width: 982px !important;
+    position: relative;
+
+    &:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      right: 25.7%;
+      background: #e1e1e1;
+      width: 1px;
+      height: 100%;
+    }
   }
 }
 
