--- a/src/styles/components/businesses/details/_location.scss
+++ b/src/styles/components/businesses/details/_location.scss
@@ -18,5 +18,10 @@
     line-height: 20px;
     margin-bottom: 4px;
     opacity: 0.87;
+
+    &:hover {
+      color: $ninth-color;
+      text-decoration: underline;
+    }
   }
 }
