--- a/src/styles/components/businesses/details/_locations.scss
+++ b/src/styles/components/businesses/details/_locations.scss
@@ -1,4 +1,6 @@
 .detail-locations {
+  margin-left: 53px;
+
   &__title {
     font-size: 20px;
     line-height: 28px;
