--- a/src/styles/components/businesses/details/_services-offered.scss
+++ b/src/styles/components/businesses/details/_services-offered.scss
@@ -1,8 +1,9 @@
 .services-offered {
   border-bottom: 1px solid #e1e1e1;
-  margin: 0 53px 32px 0;
-  padding-bottom: 32px;
   flex: 1;
+  padding-bottom: 32px;
+  margin: 0 53px 32px 0;
+  position: relative;
 
   &__title {
     font-size: 20px;
